@@ -7,14 +7,12 @@ import org.jcd2052.api.dto.UserDtoInput;
 import org.jcd2052.api.factories.UserDtoConverter;
 import org.jcd2052.api.repsonses.BaseResponse;
 import org.jcd2052.api.exceptions.UserAlreadyCreatedException;
-import org.jcd2052.api.exceptions.UserNotFoundException;
 import org.jcd2052.api.services.UserService;
 import org.jcd2052.api.repsonses.ResponseFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -29,7 +27,6 @@ import java.util.Optional;
 @RequiredArgsConstructor
 @RestController
 @RequestMapping("/api/users")
-@Transactional
 public class UsersController {
     private static final String APPLICATION_JSON = "application/json";
     private final UserService userService;
@@ -37,10 +34,10 @@ public class UsersController {
 
     @GetMapping(produces = APPLICATION_JSON)
     public ResponseEntity<BaseResponse> fetchUsers(
-            @RequestParam Integer userId,
-            @RequestParam String userName,
-            @RequestParam String email,
-            @RequestParam String userRole) {
+            @RequestParam(required = false) Integer userId,
+            @RequestParam(required = false) String userName,
+            @RequestParam(required = false) String email,
+            @RequestParam(required = false) String userRole) {
         User userProbe = User.createUser(userId, userName, email, userRole);
         return ResponseFactory.createResponse(
                 userDtoConverter.createDtoListFromEntities(userService.fetchEntities(userProbe)),
@@ -48,6 +45,7 @@ public class UsersController {
     }
 
     @PostMapping(consumes = APPLICATION_JSON, produces = APPLICATION_JSON)
+    @Transactional
     public ResponseEntity<BaseResponse> createUser(@RequestBody UserDtoInput input) {
         String username = input.getUsername();
         String email = input.getEmail();
@@ -65,6 +63,7 @@ public class UsersController {
         throw new UserAlreadyCreatedException(username, email);
     }
 
+    @Transactional
     @PutMapping(consumes = APPLICATION_JSON, produces = APPLICATION_JSON, value = "/{userId}")
     public ResponseEntity<BaseResponse> updateUser(@PathVariable int userId, @RequestBody UserDtoInput input) {
         String username = Optional.ofNullable(input.getUsername()).orElse(StringUtils.EMPTY);
@@ -80,31 +79,21 @@ public class UsersController {
             userService.save(user);
 
             return ResponseFactory.createResponse(
-                    String.format("Updated. %s", userDtoConverter.convertToDto(user)),
+                    "Updated. %s".formatted(userDtoConverter.convertToDto(user)),
                     HttpStatus.OK);
         }
         throw new UserAlreadyCreatedException(userDtoConverter.convertToDto(userByNameOrEmail.get()));
     }
 
+    @Transactional
     @DeleteMapping(consumes = APPLICATION_JSON, produces = APPLICATION_JSON, value = "/{userId}")
     public ResponseEntity<BaseResponse> deleteUserById(@PathVariable int userId) {
         User user = userService.findByIdOrThrowError(userId);
         userService.delete(user);
         return ResponseFactory.createResponse(
-                String.format(
-                        "User with id %s was deleted.%nAdditional info:%n%s",
+                "User with id %s was deleted.%nAdditional info:%n%s".formatted(
                         userId,
                         userDtoConverter.convertToDto(user)),
                 HttpStatus.OK);
-    }
-
-    @ExceptionHandler
-    private ResponseEntity<BaseResponse> handleUserNotFoundException(UserNotFoundException exception) {
-        return ResponseFactory.createResponse(exception.getMessage(), HttpStatus.NOT_FOUND);
-    }
-
-    @ExceptionHandler
-    private ResponseEntity<BaseResponse> handleUserAlreadyCreatedException(UserAlreadyCreatedException exception) {
-        return ResponseFactory.createResponse(exception.getMessage(), HttpStatus.BAD_REQUEST);
     }
 }
